<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Server Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="title_tab1">Prod</string>
    <string name="title_tab2">QA</string>
    <string name="title_tab3">Shop</string>
    <string name="about_settings">About</string>

    <string-array name="prod_items">
        <item>Katie Krause</item>
        <item>Kris Krause</item>
        <item>Cassie Krause</item>
        <item>Christine Krause</item>
        <item>Santa Claus</item>
        <item >Ace Ventura</item>
        <item >Sung Kim</item>
        <item >Eddie Van Halen</item>
        <item >Shirley Bird</item>
        <item >Bill Gates</item>
    </string-array>
    <string-array name="qa_items"></string-array>
    <string-array name="dev_items"></string-array>

    <string name="unit_test_settings">Run Tests</string>
    <string name="title_activity_about">About</string>
    <string name="about_main">Server Monitor</string>
    <string name="about_version">Version 0.1</string>
    <string name="about_email">kris.krause@gmail.com</string>
    <string name="about_license">The MIT License (MIT)</string>
    <string name="about_license_copyright">Copyright (&#169;) 2013 Kristofer A. Krause</string>
    <string name="about_license_wikiUrl">http://www.github.com/dragthor</string>
    <string name="about_license_projectUrl">http://dragthor.github.io</string>
    <string name="title_activity_test">Tests</string>
    <string name="close_settings">Quit</string>
    <string name="button_refresh">Refresh</string>
    <string name="about_privacy">Privacy</string>
    <string name="about_privacyUrl">http://dragthor.github.io</string>
    <string name="about_wiki">Wiki</string>

</resources>
